// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders in desktop mode 1`] = `
<div>
  <header
    class="c-HeaderTopBar"
    data-testid="top-bar"
    role="banner"
  >
    <div
      class="c-HeaderTopBar__Item c-HeaderTopBar__Logo"
    >
      <a
        href="/"
      >
        [Logo Collectivité]
      </a>
    </div>
    <ul
      class="c-HeaderTopBar__List"
    >
      <li
        class="c-HeaderTopBar__Item"
        style="min-width: 151px;"
      >
        <a
          href="/"
        >
          [Selecteur]
        </a>
      </li>
      <div
        aria-hidden="true"
        class="c-HeaderTopBar__Filler"
      />
      <li
        class="c-HeaderTopBar__Item"
        style="min-width: 316px;"
      >
        <a
          href="/"
        >
          [Recherche]
        </a>
      </li>
      <li
        class="c-HeaderTopBar__Item"
      >
        <a
          href="/"
        >
          [Ad]
        </a>
      </li>
      <div
        aria-hidden="true"
        class="c-HeaderTopBar__Separator"
      />
      <li
        class="c-HeaderTopBar__Item"
      >
        <a
          href="/"
        >
          [Ca]
        </a>
      </li>
      <div
        aria-hidden="true"
        class="c-HeaderTopBar__Separator"
      />
      <li
        class="c-HeaderTopBar__Item"
      >
        <a
          href="/"
        >
          [Al]
        </a>
      </li>
      <div
        aria-hidden="true"
        class="c-HeaderTopBar__Separator"
      />
      <li
        class="c-HeaderTopBar__Item"
      >
        <a
          href="/"
        >
          [Co]
        </a>
      </li>
      <div
        aria-hidden="true"
        class="c-HeaderTopBar__Separator"
      />
      <li
        class="c-HeaderTopBar__Item"
        style="min-width: 115px;"
      >
        <a
          href="/"
        >
          [Profil]
        </a>
      </li>
      <div
        aria-hidden="true"
        class="c-HeaderTopBar__Separator"
      />
      <li
        class="c-HeaderTopBar__Item"
      >
        <a
          href="/"
        >
          [Us]
        </a>
      </li>
    </ul>
  </header>
  <nav
    class="c-HeaderSideBar"
    data-testid="side-bar"
  >
    <a
      class="c-MSDLogo"
      href="https://www.monservicedechets.com/"
    >
      <div />
    </a>
  </nav>
  <div
    aria-hidden="true"
    class="c-Header__ContentCover"
    data-testid="content-cover"
  />
</div>
`;

exports[`Header renders in mobile mode 1`] = `
<div>
  <header
    class="c-HeaderTopBar"
    data-testid="top-bar"
    role="banner"
  >
    <button
      aria-expanded="false"
      class="c-HeaderTopBar__BurgerButton"
      data-testid="burger-menu-button"
      type="button"
    />
    <div
      class="c-HeaderTopBar__Item c-HeaderTopBar__Logo"
    >
      <a
        href="/"
      >
        [Logo Collectivité]
      </a>
    </div>
    <ul
      class="c-HeaderTopBar__List"
    >
      <li
        class="c-HeaderTopBar__Item c-HeaderTopBar__User"
      >
        <a
          href="/"
        >
          [Us]
        </a>
      </li>
      <li
        class="c-HeaderTopBar__Item c-HeaderTopBar__Search"
      >
        <a
          href="/"
        >
          [Re]
        </a>
      </li>
    </ul>
  </header>
  <nav
    class="c-HeaderBurgerMenu"
    data-testid="burger-menu"
  >
    <ul
      class="c-HeaderBurgerMenu__List"
    >
      <li
        class="c-HeaderBurgerMenu__Item"
        style="height: 88px;"
      >
        <span>
          [Selecteur]
        </span>
      </li>
      <li
        class="c-HeaderBurgerMenu__Item"
        style="height: 64px;"
      >
        <span>
          [Profil]
        </span>
      </li>
      <li
        class="c-HeaderBurgerMenu__Item c-HeaderBurgerMenu__Item_grow"
      >
        <nav
          class="c-HeaderBurgerMenu__Container"
          role="navigation"
        />
      </li>
      <li
        class="c-HeaderBurgerMenu__Item c-HeaderBurgerMenu__Item_grow"
        style="height: 264px;"
      >
        <nav
          class="c-HeaderBurgerMenu__Container"
          role="navigation"
        >
          <span>
            [User]
          </span>
        </nav>
      </li>
      <li
        class="c-HeaderBurgerMenu__Item"
      >
        <a
          class="c-MSDLogo"
          href="https://www.monservicedechets.com/"
        >
          <div />
        </a>
      </li>
    </ul>
  </nav>
  <div
    aria-hidden="true"
    class="c-Header__ContentCover"
    data-testid="content-cover"
  />
</div>
`;
